#12633 closed bug (fixed)
Kernel fails to load on OptiPlex 960
Reported by: | kallisti5 | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta1 |
Component: | System/Kernel | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
The kernel fails to load on the Dell OptiPlex 960.
Serial connected shows:
size: 37.6 cm x 30.1 cm border: 0 cm x 0 cm Serial Number: G434H87FGB2U Monitor Name: DELL 1908FP Horizontal frequency range = 30..81 kHz Vertical frequency range = 56..76 Hz Maximum pixel clock = 140 MHz crtc: h 1328/1440/1688, v 1025/1028/1066, pixel clock 108000000, refresh 6064 Welcome to the Haiku boot loader! number of drives: 2 add_partitions_for(0x00105420, mountFS = no) add_partitions_for(fd = 0, mountFS = no) 0x00105648 Partition::Partition 0x00105648 Partition::Scan() check for partitioning_system: GUID Partition Map check for partitioning_system: Intel Partition Map priority: 810 check for partitioning_system: Intel Extended Partition 0x001057c0 Partition::Partition 0x00105648 Partition::AddChild 0x001057c0 0x001057c0 Partition::SetParent 0x00105648 new child partition! 0x00105648 Partition::Scan(): scan child 0x001057c0 (start = 4194304, size = 629145600, parent = 0x00105648)! 0x001057c0 Partition::Scan() check for partitioning_system: GUID Partition Map check for partitioning_system: Intel Partition Map check for partitioning_system: Intel Extended Partition 0x00105648 Partition::~Partition 0x001057c0 Partition::SetParent 0x00000000 boot partition offset: 4194304 0x001057c0 Partition::_Mount check for file_system: BFS Filesystem PackageVolumeInfo::SetTo() PackageVolumeInfo::_InitState(): failed to parse activated-packages: No such file or directory load kernel kernel_x86_64... <LOCKUP>
A random mixture of BIOS / boot options tried.
Intel Core 2 vPro
Boot was attempted with intel_extreme driver blacklisted for good measure, no changes.
32-bit and 64-bit kernels both fail with same issue
Attachments (4)
Change History (17)
comment:1 by , 9 years ago
comment:2 by , 9 years ago
Description: | modified (diff) |
---|---|
Summary: | 64-bit kernel fails to load on OptiPlex 960 → Kernel fails to load on OptiPlex 960 |
by , 9 years ago
Attachment: | cpuinfo.txt added |
---|
by , 9 years ago
by , 9 years ago
by , 9 years ago
Attachment: | lspci-ids.txt added |
---|
comment:9 by , 9 years ago
http://cgit.haiku-os.org/haiku/commit/?id=f3e381dd0cf6a08c2e20c8c24f5ff8b78ac04032 was the regression... undoing it results in a booting system.
comment:10 by , 9 years ago
Milestone: | Unscheduled → R1/beta1 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
resolved in hrev50070. Let me know if anyone knows why :-\
comment:12 by , 9 years ago
Yeah, I never tested gcc2. I can do a quick test of gcc2 pre-hrev50070 this evening.
comment:13 by , 9 years ago
According to korli's commit message, that version should still be running. It would be interesting to know the difference of the assembly output of the GCC compiler version from back then, and the version that we're now using.
(tested via hrev50007)